<resources>
    <string name="app_name">dyplom</string>
    <string name="startStopWatchTime">00:00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="preparation">Preparation</string>
    <string name="_0">00:00</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="rounds">Rounds</string>
    <string name="__0">0</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="exercise">Exercise</string>
    <string name="description">description</string>
    <string name="search_view_exercise_hint">Search exercise</string>
    <string name="all_equipment">All equipment</string>
    <string name="equipment">Equipment:</string>
    <string name="all_categories">All categories</string>
    <string name="add_workout">Add workout</string>
    <string name="create_workout">Create workout</string>
    <string name="add_exercise">Add exercise</string>
    <string name="add_some_exercise_comments">Add some exercise comments here</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="replace">Replace</string>
    <string name="cancel">Cancel</string>
    <string name="rest_time">Rest time:</string>
    <string name="save">Save</string>
    <string name="sets">Sets:</string>
    <string name="_1">1</string>
    <string name="kg">Kg:</string>
    <string name="workout_title">Workout title</string>
    <string name="add_some_exercises_to_your_workout">Add some exercises to your workout</string>
    <string name="explore_workouts">Explore workouts</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="password_must_contain_at_least_8_symbols">password must contain at least 8 symbols</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="username">Username</string>
    <string name="user_with_this_email_already_exist">User with this email already exist</string>
    <string name="workout">workout</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="to_sign_in_hint_label">Don’t have an account yet?</string>
    <string name="to_sign_text_button_text">Sign in</string>
    <string name="to_sign_up_button_text">Sign up</string>
    <string name="sign_in_screen_header">Sign in</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account?</string>
    <string name="my_workouts">My workouts</string>
    <string name="workout_create_error">Workout must be named and contain at least 1 exercise</string>
</resources>