<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/rest_time"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.dyplom.presentation.ui.timer.util.MyEditTextView
            android:id="@+id/editTextRestTime"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:text="@string/_0"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/textViewRestTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewRestTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/sets"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRestTime" />

        <EditText
            android:id="@+id/editTextSets"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/_1"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/textViewSets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewSets" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/kg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSets" />

        <EditText
            android:id="@+id/editTextKg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/__0"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/textViewKg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewKg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_button_selector"
            android:textColor="@drawable/black_text_selector"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="@dimen/small_offset"
            android:background="@drawable/black_button_selector"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>