<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancelWorkoutCreate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_button_selector"
        android:textColor="@drawable/black_text_selector"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_workout"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/buttonSaveCreatedWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonSaveCreatedWorkout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveCreatedWorkout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@drawable/border_button_selector"
        android:textColor="@drawable/black_text_selector"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextWorkoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:backgroundTint="@color/grey"
        android:hint="@string/workout_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCancelWorkoutCreate" />

    <TextView
        android:id="@+id/textViewAddExerciseHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_some_exercises_to_your_workout"
        android:textColor="@color/grey_text_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonAddExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextWorkoutName"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="12dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAddExercise"
        app:layout_constraintTop_toBottomOf="@id/editTextWorkoutName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddExercise"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/black_button_selector"
        android:text="@string/add_exercise"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>