<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMyWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/my_workouts"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateWorkout"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_button_selector"
        android:text="@string/create_workout"
        android:textAllCaps="false"
        android:textColor="@drawable/black_text_selector"
        app:layout_constraintEnd_toStartOf="@id/buttonExploreWorkout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMyWorkouts" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExploreWorkout"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_button_selector"
        android:text="@string/explore_workouts"
        android:textAllCaps="false"
        android:textColor="@drawable/black_text_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonCreateWorkout"
        app:layout_constraintTop_toBottomOf="@id/textViewMyWorkouts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonExploreWorkout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonExploreWorkout"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>